clusters/production/external-servers/minio/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: minio-slice
  labels:
    kubernetes.io/service-name: minio
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 9001
endpoints:
  - addresses:
      - "192.168.4.103"
    conditions:
      ready: true
