clusters/production/external-servers/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: https
      port: 9001
      targetPort: 9001
      protocol: TCP
