clusters/production/external-servers/minio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: minio
          port: 9001
          scheme: http
